--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ node_modules
 /dist
 
 
-# local env files
+# local env fileså
 .env.local
 .env.*.local
 
@@ -21,3 +21,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+.tool-versions
